[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hostile"
authors = [{name = "Bede Constantinides", email = "bedeabc@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.11.0"
dependencies = [
  "defopt",
  "dnaio",
  "httpx",
  "pyfastx",
  "platformdirs",
  "tqdm"
]

[project.urls]
Home = "https://github.com/bede/hostile"

[project.scripts]
hostile = "hostile.cli:main"

[project.optional-dependencies]
dev = [
    "pytest >=7.3.1",
    "pre-commit >= 3.3.2"
]