[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hostile"
authors = [{name = "Bede Constantinides", email = "b@bede.im"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
  "defopt>=6.4.0",
  "dnaio>=1.2.0",
  "httpx>=0.24.1",
  "platformdirs>=3.5.1",
  "tqdm>=4.65.0",
]

[project.urls]
Home = "https://github.com/bede/hostile"

[project.scripts]
hostile = "hostile.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pre-commit>=3.3.2",
    "flit>=3.9.0"
]
